--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -7,6 +7,7 @@
         width: 100vw;
         max-width: $max-content-width;
         margin: 0 auto;
+        position: relative;
     }
 
     &__overlay {
@@ -14,7 +15,7 @@
         top: 0;
         height: 0;
         width: 100%;
-        height: 103%;
+        height: 100%;
         background-color: rgba(0,0,0,0.4);
     }
 
